feat(server): ADD projectRoutes and createProject API
