# be-steady-server/src/database/index.ts
@@ -1,12 +1,13 @@
 import Sequelize from 'sequelize';
 import { NODE_ENV, DB_HOST, DB_PORT, DB_USER, DB_PASSWORD, DB_DATABASE } from '@config';
 import UserModel from '@models/users.model';
+import ProjectModel from '@models/projects.model';
 import { logger } from '@utils/logger';
 
 const sequelize = new Sequelize.Sequelize(DB_DATABASE, DB_USER, DB_PASSWORD, {
   dialect: 'mysql',
   host: DB_HOST,
-  port: DB_PORT,
+  port: parseInt(DB_PORT),
   timezone: '+09:00',
   define: {
     charset: 'utf8mb4',
@@ -29,6 +30,7 @@ sequelize.authenticate();
 
 export const DB = {
   Users: UserModel(sequelize),
+  Projects: ProjectModel(sequelize),
   sequelize, // connection instance (RAW queries)
   Sequelize, // library
 };
