# be-steady-server/src/server.ts
@@ -1,10 +1,11 @@
 import { App } from '@/app';
 import { AuthRoute } from '@routes/auth.route';
 import { UserRoute } from '@routes/users.route';
+import { ProjectRoute } from '@routes/projects.route';
 import { ValidateEnv } from '@utils/validateEnv';
 
 ValidateEnv();
 
-const app = new App([new AuthRoute(), new UserRoute()]);
+const app = new App([new AuthRoute(), new UserRoute(), new ProjectRoute()]);
 
 app.listen();
