# be-steady-server/swagger.yaml
@@ -103,6 +103,29 @@ paths:
         500:
           description: 'Server Error'
 
+# [POST] projects
+  /projects:
+    post:
+      tags:
+      - projects
+      summary: Create Project
+      parameters:
+      - name: body
+        in: body
+        description: user Data
+        required: true
+        schema:
+          $ref: '#/definitions/projects'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
 # definitions
 definitions:
   users:
@@ -117,6 +140,15 @@ definitions:
       password:
         type: string
         description: user Password
+
+  projects:
+    type: object
+    required:
+        - title
+    properties:
+      title:
+        type: string
+        description: project Title
 
 schemes:
  - https
